MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/Milestone_Update_Tracker__c.object-meta.xml
<CustomObject>
    <label>Milestone Update Tracker</label>
    <nameField>
        <displayFormat>MUT - {00000}</displayFormat>
        <label>Milestone Update Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Update Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>