MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Actual_Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Milestone_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Milestone Due Date</label>
    <type>Date</type>
</CustomField>