MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Confirmed_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Milestone_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Milestone Date</label>
    <type>Date</type>
</CustomField>