MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Is_Reschedule_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Reschedule_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reschedule Required</label>
    <type>Checkbox</type>
</CustomField>