MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Milestone Update Tracker</relationshipLabel>
    <relationshipName>Milestone_Update_Tracker</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>