MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Reschedule_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Milestone_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reschedule Milestone Date</label>
    <type>Date</type>
</CustomField>