MODON MRE BPDEV/force-app/main/default/objects/Milestone_Update_Tracker__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Milestone Update Tracker</relationshipLabel>
    <relationshipName>Milestone_Update_Tracker</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>